# amumath

./: .gitignore  CMakeLists.txt  Makefile
bindings/: CMakeLists.txt  bindings.cpp
include/amumath/: Vector2.h  Vector3.h  algebra.h
src/: CMakeLists.txt  Vector2.cpp  Vector3.cpp
tests/: CMakeLists.txt  test_vector3.cpp
